2011-06-27  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace.spec: New (thanks, Pearly).

	* makefile (uninstall): Removed, they never work properly.
	(install): Install in cmd/ as well.
	* libdtrace/makefile (uninstall): Removed.
	(install): Use DESTDIR.
	* cmd/makefile (BINDIR): Renamed to...
	(BUILD_DIR): ... this.
	* cmd/makefile (SBINDIR): New.
	* cmd/makefile (install): New.

2011-06-24  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_cc.c (dtrace_program_strcompile): Do not
	debugging-dump programs on error.
	(dtrace_program_fcompile): Likewise.

2011-06-24  Shujing Zhao  <pearly.zhao@oracle.com>

	Remove include/sys/elf.h.
	* include/sys/elf.h: Remove.
	* include/sys/link.h: Clean the flags and declarations.
	* include/sys/machelf.h: Likewise.

2011-06-21  Nick Alcock  <nick.alcock@oracle.com>

	Improve intermediate format printing.

	* libdtrace/dt_as.c (dt_as): Do not emit intermediate output here.

	* libdtrace/dt_cc.c (dtrace_program_strcompile): Emit it here instead.
	(dtrace_program_fcompile): Likewise.

	* libdtrace/dt_dis.c: Include <dt_printf.h>.
	(dt_dis): Rename to...
	(dt_dis_difo): ... this.  No longer print out the header line.
	(dt_dis_action): New, decode action names and printf() and
	printa() format strings.
	(dt_dis_format_print): New, print printf() and printa() format strings,
	eliding trailing linefeeds.
	(dt_dis_stmts): Disassemble a statement, including name of
	containing probe.
	(dt_dis_program): Disassemble a DTrace program.
	(dt_dis_iter): New helper type.
	* libdtrace/dt_impl.h: Drop dt_dis() in favour of dt_dis_program().

2011-06-17  Nick Alcock  <nick.alcock@oracle.com>

	Fix locking and signal handling around process termination.

	* libdtrace/dt_proc.h (dt_proc_t): Remove dpr_quit.  Maintain
	dpr_tid_locked inside the control thread to detect cancellation
	while dpr_lock is held.

	* libdtrace/dt_proc.c (dt_proc_control_cleanup): New cancellation
	function for control threads.